force-app/main/default/objects/Case/fields/Loan_Letter__c.field-meta.xml
<CustomField>
    <fullName>Loan_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loan Letter</label>
    <type>Checkbox</type>
</CustomField>