force-app/main/default/objects/Case/fields/LRC_Cleared__c.field-meta.xml
<CustomField>
    <fullName>LRC_Cleared__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LRC Cleared</label>
    <type>Checkbox</type>
</CustomField>