force-app/main/default/objects/Case/fields/LRC_Cleared_By__c.field-meta.xml
<CustomField>
    <fullName>LRC_Cleared_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LRC Cleared By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases_LRC_Cleared_By</relationshipName>
    <type>Lookup</type>
</CustomField>