force-app/main/default/objects/Case/fields/LRC_Cleared_Date__c.field-meta.xml
<CustomField>
    <fullName>LRC_Cleared_Date__c</fullName>
    <label>LRC Cleared Date</label>
    <type>DateTime</type>
</CustomField>