force-app/main/default/objects/Case/fields/Mode_of_Interaction__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Interaction__c</fullName>
    <label>Mode of Interaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Video Call</fullName>
            </value>
            <value>
                <fullName>Messaging</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>