force-app/main/default/objects/Case/fields/New_Admit_Email__c.field-meta.xml
<CustomField>
    <fullName>New_Admit_Email__c</fullName>
    <formula>Contact.New_Admit_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Admit Email</label>
    <type>Text</type>
</CustomField>