force-app/main/default/objects/Case/fields/Nomination_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Nomination_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nomination Confirmation</label>
    <type>Checkbox</type>
</CustomField>