force-app/main/default/objects/Case/fields/Number_of_Courses_to_be_Retaken__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Courses_to_be_Retaken__c</fullName>
    <label>Number of Courses to be Retaken</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>