force-app/main/default/objects/Case/fields/Number_of_Credits_to_be_Attempted__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Credits_to_be_Attempted__c</fullName>
    <label>Number of Credits to be Attempted.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>