force-app/main/default/objects/Case/fields/Online_Nomination_Form__c.field-meta.xml
<CustomField>
    <fullName>Online_Nomination_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Online Nomination Form</label>
    <type>Checkbox</type>
</CustomField>