force-app/main/default/objects/Case/fields/Operations_Cleared__c.field-meta.xml
<CustomField>
    <fullName>Operations_Cleared__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Operations Cleared</label>
    <type>Checkbox</type>
</CustomField>