force-app/main/default/objects/Case/fields/Operations_Cleared_By__c.field-meta.xml
<CustomField>
    <fullName>Operations_Cleared_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operations Cleared By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases_Operations_Cleared_By</relationshipName>
    <type>Lookup</type>
</CustomField>