force-app/main/default/objects/Case/fields/Operations_Cleared_Date__c.field-meta.xml
<CustomField>
    <fullName>Operations_Cleared_Date__c</fullName>
    <label>Operations Cleared Date</label>
    <type>DateTime</type>
</CustomField>