force-app/main/default/objects/Case/fields/Other_Adjustment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Other_Adjustment_Amount__c</fullName>
    <label>Other Adjustment Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>