force-app/main/default/objects/Case/fields/Partner_Transcript_Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Partner_Transcript_Upload_Date__c</fullName>
    <label>Partner Transcript Upload Date</label>
    <type>DateTime</type>
</CustomField>