force-app/main/default/objects/Case/fields/Passport_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Passport_Expiry__c</fullName>
    <description>Passport expiry date</description>
    <inlineHelpText>Select the date the passport expires.</inlineHelpText>
    <label>Passport Expiry</label>
    <type>Date</type>
</CustomField>