force-app/main/default/objects/Case/fields/Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>Passport_Number__c</fullName>
    <description>Passport number provided by the traveler</description>
    <inlineHelpText>Enter the passport number as printed on the document.</inlineHelpText>
    <label>Passport Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>