force-app/main/default/objects/Case/fields/Payment_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reference_Number__c</fullName>
    <label>Payment Reference Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>