force-app/main/default/objects/Case/fields/PGID__c.field-meta.xml
<CustomField>
    <fullName>PGID__c</fullName>
    <formula>Program_Enrollment__r.PGID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PGID</label>
    <type>Text</type>
</CustomField>