force-app/main/default/objects/Case/fields/Planned_Exit_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Exit_Date__c</fullName>
    <label>Planned Exit Date</label>
    <type>Date</type>
</CustomField>