force-app/main/default/objects/Case/fields/Population_Finalized_By__c.field-meta.xml
<CustomField>
    <fullName>Population_Finalized_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Population Finalized By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Population Finalized Cases</relationshipLabel>
    <relationshipName>Population_Finalized_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>