force-app/main/default/objects/Case/fields/Population_Finalized_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Population_Finalized_Datetime__c</fullName>
    <label>Population Finalized Datetime</label>
    <type>DateTime</type>
</CustomField>