force-app/main/default/objects/Case/fields/Population_Student_Count__c.field-meta.xml
<CustomField>
    <fullName>Population_Student_Count__c</fullName>
    <label>Population Student Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>