force-app/main/default/objects/Case/fields/Program_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Program_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Enrollment</label>
    <referenceTo>ProgramEnrollment</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>