force-app/main/default/objects/Case/fields/ProgramEnrollment__c.field-meta.xml
<CustomField>
    <fullName>ProgramEnrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>At Risk student Banner</label>
    <type>Checkbox</type>
</CustomField>