force-app/main/default/objects/Case/fields/Proposed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Date_Time__c</fullName>
    <label>Proposed Date/Time</label>
    <type>DateTime</type>
</CustomField>