force-app/main/default/objects/Case/fields/Ready_for_Graduation_Audit__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Graduation_Audit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready for Graduation Audit</label>
    <type>Checkbox</type>
</CustomField>