force-app/main/default/objects/Case/fields/Rejoin_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Rejoin_Amount_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rejoin Amount Paid</label>
    <type>Checkbox</type>
</CustomField>