force-app/main/default/objects/Case/fields/Rejoin_Eligiblity_Date__c.field-meta.xml
<CustomField>
    <fullName>Rejoin_Eligiblity_Date__c</fullName>
    <label>Rejoin Eligiblity Date</label>
    <type>Date</type>
</CustomField>