force-app/main/default/objects/Case/fields/RejoinCaseKey__c.field-meta.xml
<CustomField>
    <fullName>RejoinCaseKey__c</fullName>
    <formula>Academic_Year__c &amp;&quot; | &quot; &amp;  &quot; | &quot; &amp;  Academic_Session__c</formula>
    <label>Rejoin Case Key</label>
    <type>Text</type>
</CustomField>