force-app/main/default/objects/Case/fields/Remaining_Budget__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Budget__c</fullName>
    <formula>Academic_Term__r.Remaining_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>