force-app/main/default/objects/Case/fields/Requested_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Requested_Legal_Name__c</fullName>
    <label>Requested Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>