force-app/main/default/objects/Case/fields/Residence_and_Accommodation_vacate_dat__c.field-meta.xml
<CustomField>
    <fullName>Residence_and_Accommodation_vacate_dat__c</fullName>
    <label>Residence and Accommodation vacate dat</label>
    <type>Date</type>
</CustomField>