force-app/main/default/objects/Case/fields/RO_HOD__c.field-meta.xml
<CustomField>
    <fullName>RO_HOD__c</fullName>
    <label>RO HOD</label>
    <type>TextArea</type>
</CustomField>