force-app/main/default/objects/Case/fields/RO_Level_2__c.field-meta.xml
<CustomField>
    <fullName>RO_Level_2__c</fullName>
    <label>RO Level 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>