force-app/main/default/objects/Case/fields/ROLevel2CaseAssignee__c.field-meta.xml
<CustomField>
    <fullName>ROLevel2CaseAssignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ROLevel2CaseAssignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>