force-app/main/default/objects/Case/fields/RTGS_NEFT_Number__c.field-meta.xml
<CustomField>
    <fullName>RTGS_NEFT_Number__c</fullName>
    <label>RTGS NEFT Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>