force-app/main/default/objects/Case/fields/Run_Closure_Status__c.field-meta.xml
<CustomField>
    <fullName>Run_Closure_Status__c</fullName>
    <label>Run Closure Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>GSC Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>