force-app/main/default/objects/Case/fields/Schorlarship__c.field-meta.xml
<CustomField>
    <fullName>Schorlarship__c</fullName>
    <label>scholarship status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>