force-app/main/default/objects/Case/fields/Selected_Cohort__c.field-meta.xml
<CustomField>
    <fullName>Selected_Cohort__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selected Cohort</label>
    <referenceTo>AcademicTerm</referenceTo>
    <relationshipLabel>Cases (Selected Cohort)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>