force-app/main/default/objects/Case/fields/sfal__AdvisingPool__c.field-meta.xml
<CustomField>
    <fullName>sfal__AdvisingPool__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated Support Pool record for Cases that originated from a Support Pool. If the Case originated from a Queue owned by a User, this field is blank.</description>
    <inlineHelpText>The associated Support Pool record for Cases that originated from a Support Pool. If the Case originated from a Queue owned by a User, this field is blank.</inlineHelpText>
    <label>Support Pool</label>
    <referenceTo>sfal__AdvisingPool__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>