force-app/main/default/objects/Case/fields/sfal__Alert__c.field-meta.xml
<CustomField>
    <fullName>sfal__Alert__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the alert that was the source for this case record</description>
    <inlineHelpText>Lookup to the alert that was the source for this case record</inlineHelpText>
    <label>Alert</label>
    <referenceTo>sfal__Alert__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>