force-app/main/default/objects/Case/fields/sfal__IsAdviseeRecord__c.field-meta.xml
<CustomField>
    <fullName>sfal__IsAdviseeRecord__c</fullName>
    <description>Indicates whether the Case record is a student record Case.</description>
    <formula>IF(
    ISBLANK($Setup.sfal__SAL_Settings__c.sfal__Advisee_Record_RecordType__c),
    false,
    IF(
        CONTAINS(
            $Setup.sfal__SAL_Settings__c.sfal__Advisee_Record_RecordType__c,
            &quot;.&quot;
        ),
        $Setup.sfal__SAL_Settings__c.sfal__Advisee_Record_RecordType__c == RecordType.NamespacePrefix &amp; &quot;.&quot; &amp; RecordType.DeveloperName,
        ISBLANK(RecordType.NamespacePrefix) &amp;&amp; $Setup.sfal__SAL_Settings__c.sfal__Advisee_Record_RecordType__c == RecordType.DeveloperName
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Student Record</label>
    <type>Checkbox</type>
</CustomField>