force-app/main/default/objects/Case/fields/sfal__Location__c.field-meta.xml
<CustomField>
    <fullName>sfal__Location__c</fullName>
    <description>The location where the attendee can meet with someone.</description>
    <inlineHelpText>The location where the attendee can meet with someone.</inlineHelpText>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>