force-app/main/default/objects/Case/fields/sfal__Proxy__c.field-meta.xml
<CustomField>
    <fullName>sfal__Proxy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, the attendee is there on someone&apos;s behalf, such as a parent.</description>
    <inlineHelpText>When selected, the attendee is there on someone&apos;s behalf, such as a parent.</inlineHelpText>
    <label>Proxy</label>
    <type>Checkbox</type>
</CustomField>