force-app/main/default/objects/Case/fields/sfal__ProxyName__c.field-meta.xml
<CustomField>
    <fullName>sfal__ProxyName__c</fullName>
    <description>The name of the person checking in to a waiting room on behalf of a student.</description>
    <inlineHelpText>The name of the person checking in to a waiting room on behalf of a student.</inlineHelpText>
    <label>Proxy Name</label>
    <type>TextArea</type>
</CustomField>