force-app/main/default/objects/Case/fields/sfal__StudentID__c.field-meta.xml
<CustomField>
    <fullName>sfal__StudentID__c</fullName>
    <description>The student ID for the student checking in to a waiting room either for themselves or through a proxy.</description>
    <inlineHelpText>The student ID for the student checking in to a waiting room either for themselves or through a proxy.</inlineHelpText>
    <label>Student ID</label>
    <type>TextArea</type>
</CustomField>