force-app/main/default/objects/Case/fields/sfal__Subtopic__c.field-meta.xml
<CustomField>
    <fullName>sfal__Subtopic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The specific topic the attendee wants to discuss.</description>
    <label>Subtopic</label>
    <referenceTo>sfal__Topic__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>