force-app/main/default/objects/Case/fields/sfal__Topic__c.field-meta.xml
<CustomField>
    <fullName>sfal__Topic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The topic the attendee wants to discuss.</description>
    <inlineHelpText>The topic the attendee wants to discuss.</inlineHelpText>
    <label>Topic</label>
    <referenceTo>sfal__Topic__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>