force-app/main/default/objects/Case/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Course Related- Core</fullName>
            </value>
            <value>
                <fullName>Course Related- Elective</fullName>
            </value>
            <value>
                <fullName>Course Related- Flexi Core</fullName>
            </value>
            <value>
                <fullName>Programme Requirements</fullName>
            </value>
            <value>
                <fullName>Study Group</fullName>
            </value>
            <value>
                <fullName>Attendance</fullName>
            </value>
            <value>
                <fullName>Student ID Card</fullName>
            </value>
            <value>
                <fullName>Classroom Seating</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
            <value>
                <fullName>Inter-cohort Exchange</fullName>
            </value>
            <value>
                <fullName>Inter-cohort Transfer</fullName>
            </value>
            <value>
                <fullName>Pre-term</fullName>
            </value>
            <value>
                <fullName>ExchangeSchoolsconfirmations</fullName>
            </value>
            <value>
                <fullName>Exchange Schoolsfactsheets</fullName>
            </value>
            <value>
                <fullName>Exchange SchoolsMOU</fullName>
            </value>
            <value>
                <fullName>Exchange school Surveys</fullName>
            </value>
            <value>
                <fullName>Student Bidding</fullName>
            </value>
            <value>
                <fullName>Student Nominations</fullName>
            </value>
            <value>
                <fullName>Student Undertakings</fullName>
            </value>
            <value>
                <fullName>Student Withdrawal</fullName>
            </value>
            <value>
                <fullName>Student Visa - Recommendation letter, Visa copy, passport copy etc.</fullName>
            </value>
            <value>
                <fullName>Student Course Confirmation forms</fullName>
            </value>
            <value>
                <fullName>Student Exit</fullName>
            </value>
            <value>
                <fullName>Student Transcripts</fullName>
            </value>
            <value>
                <fullName>Student Registrations</fullName>
            </value>
            <value>
                <fullName>Course Information</fullName>
            </value>
            <value>
                <fullName>Student Arrival - Accommodation, Buddy, Welcome email etc.</fullName>
            </value>
            <value>
                <fullName>Fee Related Queries</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>