force-app/main/default/objects/Case/fields/Sub_Types__c.field-meta.xml
<CustomField>
    <fullName>Sub_Types__c</fullName>
    <label>Sub Types</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Name Change / Display</fullName>
            </value>
            <value>
                <fullName>Graduation Walk — Exception Petition</fullName>
            </value>
            <value>
                <fullName>Visa NOC</fullName>
            </value>
            <value>
                <fullName>Academic Records (Certificates / Transcripts)</fullName>
            </value>
            <value>
                <fullName>Fee Exception</fullName>
            </value>
            <value>
                <fullName>Bidding (Registro)</fullName>
            </value>
            <value>
                <fullName>Incoming &amp; Outgoing Student Exchange (Registro)</fullName>
            </value>
            <value>
                <fullName>Academic</fullName>
            </value>
            <value>
                <fullName>Events &amp; Budgets</fullName>
            </value>
            <value>
                <fullName>Special Interest Group Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>