force-app/main/default/objects/Case/fields/Terms_and_Condition__c.field-meta.xml
<CustomField>
    <fullName>Terms_and_Condition__c</fullName>
    <label>Terms and Condition</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>