force-app/main/default/objects/Case/fields/TermsCondition__c.field-meta.xml
<CustomField>
    <fullName>TermsCondition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terms &amp; Condition</label>
    <type>Checkbox</type>
</CustomField>