force-app/main/default/objects/Case/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Event program tittle</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>