force-app/main/default/objects/Case/fields/To_Term__c.field-meta.xml
<CustomField>
    <fullName>To_Term__c</fullName>
    <label>To Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>