force-app/main/default/objects/Case/fields/transaction_date__c.field-meta.xml
<CustomField>
    <fullName>transaction_date__c</fullName>
    <label>Transaction date</label>
    <type>Date</type>
</CustomField>