force-app/main/default/objects/Case/fields/Transcripts_Received__c.field-meta.xml
<CustomField>
    <fullName>Transcripts_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transcripts Received</label>
    <type>Checkbox</type>
</CustomField>