force-app/main/default/objects/Case/fields/Travel_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Travel_End_Date__c</fullName>
    <description>End date of travel</description>
    <inlineHelpText>Select the last day of travel.</inlineHelpText>
    <label>Travel End Date</label>
    <type>Date</type>
</CustomField>