force-app/main/default/objects/Case/fields/Travel_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Travel_Start_Date__c</fullName>
    <description>Start date of travel</description>
    <inlineHelpText>Select the first day of travel.</inlineHelpText>
    <label>Travel Start Date</label>
    <type>Date</type>
</CustomField>