force-app/main/default/objects/Case/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mental Health</fullName>
            </value>
            <value>
                <fullName>Physical Health / Medical</fullName>
            </value>
            <value>
                <fullName>Safety / Security Concern</fullName>
            </value>
            <value>
                <fullName>Accessibility / Accommodation</fullName>
            </value>
            <value>
                <fullName>Financial Hardship</fullName>
            </value>
            <value>
                <fullName>Harassment / Misconduct / Bullying</fullName>
            </value>
            <value>
                <fullName>Family / Personal Emergency</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>