force-app/main/default/objects/Case/fields/Undertaking__c.field-meta.xml
<CustomField>
    <fullName>Undertaking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Undertaking</label>
    <type>Checkbox</type>
</CustomField>