force-app/main/default/objects/Case/fields/Visa_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Visa_Purpose__c</fullName>
    <description>Purpose associated with the visa</description>
    <inlineHelpText>Select the main purpose of travel.</inlineHelpText>
    <label>Visa Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Employment</fullName>
            </value>
            <value>
                <fullName>Family Visit</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Study</fullName>
            </value>
            <value>
                <fullName>Tourism</fullName>
                <default>true</default>
                <label>Tourism</label>
            </value>
            <value>
                <fullName>Transit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>