force-app/main/default/objects/Case/fields/Visa_Recommendation_Letter__c.field-meta.xml
<CustomField>
    <fullName>Visa_Recommendation_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visa Recommendation Letter</label>
    <type>Checkbox</type>
</CustomField>