force-app/main/default/objects/Case/fields/Visa_Status__c.field-meta.xml
<CustomField>
    <fullName>Visa_Status__c</fullName>
    <label>Visa Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>