force-app/main/default/objects/Case/fields/Visa_Type__c.field-meta.xml
<CustomField>
    <fullName>Visa_Type__c</fullName>
    <description>Visa type for the trip</description>
    <inlineHelpText>Select the visa type.</inlineHelpText>
    <label>Visa Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Tourist</fullName>
                <default>true</default>
                <label>Tourist</label>
            </value>
            <value>
                <fullName>Transit</fullName>
            </value>
            <value>
                <fullName>Work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>